--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -26,7 +26,7 @@
       </nav>
       
       <header class="header-one">
-          <h1>Innovation <br/>On<br/>Demand</h1>
+          <h1>Innovation <br/><span class="move">On</span><br/>Demand</h1>
           <button type="button">Get Started</button>
           <img src="img/header-img.png" alt="Image of a code snippet.">
       </header>
@@ -64,7 +64,7 @@
           </div>
      </section>
       
-     <address class="">
+     <address>
          <h3>Contact</h3>
          123 Way 456 Street
          Somewhere, USA<br/>
@@ -73,6 +73,6 @@
          <br/><br/>
          sales@greatidea.io
      </address>
-          <p class="copyright">Copyright Great Idea! 2018</p>
+     <p class="copyright">Copyright Great Idea! 2018</p>
   </body>
 </html>
