--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -26,7 +26,7 @@
       </nav>
       
       <header class="header-one">
-          <h1>Innovation <br/><span class="move">On</span><br/>Demand</h1>
+          <h1><span class="move-1">Innovation</span> <br/><span class="move-2">On</span><br/>Demand</h1>
           <button type="button">Get Started</button>
           <img src="img/header-img.png" alt="Image of a code snippet.">
       </header>
