--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -7,6 +7,7 @@
   <title>Great Idea!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet"> 
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -16,7 +17,7 @@
 
   <body>
       <nav class="navigation">
-          <a href="#">Service</a>
+          <a href="http://127.0.0.1:61319/great-idea-website/index2.html">Service</a>
           <a href="#">Product</a>
           <a href="#">Vision</a>
           <a href="#">Features</a>
@@ -24,12 +25,12 @@
           <a href="#">Contact</a>
           <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
       </nav>
-      
+      <!-- Header-->
       <header class="header-one">
           <h1><span class="move-1">Innovation</span> <br/><span class="move-2">On</span><br/>Demand</h1>
           <button type="button">Get Started</button>
           <img src="img/header-img.png" alt="Image of a code snippet.">
-      </header>
+      </header><!--/header-->
 
       <section class="section-one">
           <div class="div-p-h3">
@@ -73,6 +74,8 @@
          <br/><br/>
          sales@greatidea.io
      </address>
-     <p class="copyright">Copyright Great Idea! 2018</p>
+     <div>
+       <p class="copyright">Copyright Great Idea! 2018</p>
+     </div>
   </body>
 </html>
